[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-audit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-bitcoinrpc",
    "python-dotenv",
    "tweepy>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
