[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-audit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-bitcoinrpc~=1.0",
    "python-dotenv~=1.2",
    "tweepy~=4.16",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
