[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-audit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-bitcoinrpc~=1.0",
    "python-dotenv~=1.2",
    "tweepy~=4.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/epaper --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
relative_files = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-length enforced by formatter, not linter
]
